// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileFormField should render 1`] = `
<div>
  <fieldset
    class="sc-AxhCb ckQmOL relative h-20 "
  >
    <div
      class="mb-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="profile"
        label="Profile"
      >
        Profile
      </label>
    </div>
    <div
      class="sc-fzozJi OgXfh ProfileFormField__select-contact select-transparent"
    >
      <div
        class="sc-fzozJi OgXfh"
      >
        <select
          class="sc-AxgMl fmvYVK overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-12"
          data-testid="ProfileFormField__select-profile"
          name="profile"
        >
          <option
            disabled=""
            selected=""
            value=""
          >
             
          </option>
          <option
            data-testid="ProfileFormField__profile-select"
            value="FJKDSALJFKASLJFKSDAJFKFKDSAJFKSAJFKLASJKDFJ"
          >
            My Wallet FJKDSALJFKASL...SAJFKLASJKDFJ
          </option>
        </select>
        <div
          class="sc-AxheI sc-AxmLO jcthaj w-12 text-lg pointer-events-none text-theme-neutral-dark"
        >
          <div
            class="sc-AxhUy cPXLjK"
            height="1em"
            width="1em"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxheI sc-AxmLO jcthaj"
      >
        <button
          class="px-3 pr-2 text-theme-primary-300 focus:outline-none"
        >
          <div
            class="sc-AxhUy hSYVGy"
            height="20"
            width="20"
          >
            <svg>
              user.svg
            </svg>
          </div>
        </button>
        <div
          class="sc-AxiKw hpWYLk border-theme-neutral-300"
          type="vertical"
        />
        <button
          class="pl-2 pr-4 text-theme-primary-300 focus:outline-none"
        >
          <div
            class="sc-AxhUy hSYVGy"
            height="20"
            width="20"
          >
            <svg>
              receive.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div
      class="absolute ml-4 -mt-10"
    >
      <div
        class="sc-AxirZ HSPq mt-px bg-theme-neutral-200 border-theme-neutral-200"
      />
    </div>
  </fieldset>
</div>
`;

exports[`ProfileFormField should render with selected profile 1`] = `
<div>
  <fieldset
    class="sc-AxhCb ckQmOL relative h-20 "
  >
    <div
      class="mb-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="profile"
        label="Profile"
      >
        Profile
      </label>
    </div>
    <div
      class="sc-fzozJi OgXfh ProfileFormField__select-contact select-transparent"
    >
      <div
        class="sc-fzozJi OgXfh"
      >
        <select
          class="sc-AxgMl fmvYVK overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-12"
          data-testid="ProfileFormField__select-profile"
          name="profile"
        >
          <option
            disabled=""
            selected=""
            value=""
          >
             
          </option>
          <option
            data-testid="ProfileFormField__profile-select"
            value="FJKDSALJFKASLJFKSDAJFKFKDSAJFKSAJFKLASJKDFJ"
          >
            My Wallet FJKDSALJFKASL...SAJFKLASJKDFJ
          </option>
        </select>
        <div
          class="sc-AxheI sc-AxmLO jcthaj w-12 text-lg pointer-events-none text-theme-neutral-dark"
        >
          <div
            class="sc-AxhUy cPXLjK"
            height="1em"
            width="1em"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxheI sc-AxmLO jcthaj"
      >
        <button
          class="px-3 pr-2 text-theme-primary-300 focus:outline-none"
        >
          <div
            class="sc-AxhUy hSYVGy"
            height="20"
            width="20"
          >
            <svg>
              user.svg
            </svg>
          </div>
        </button>
        <div
          class="sc-AxiKw hpWYLk border-theme-neutral-300"
          type="vertical"
        />
        <button
          class="pl-2 pr-4 text-theme-primary-300 focus:outline-none"
        >
          <div
            class="sc-AxhUy hSYVGy"
            height="20"
            width="20"
          >
            <svg>
              receive.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div
      class="flex ml-4 -mt-10"
    >
      <div
        class="sc-AxirZ kSZulD bg-theme-neutral-300 border-theme-neutral-300"
      />
      <div
        class="mt-1 ml-4 text-theme-neutral-800"
      >
        <div
          class="inline-block truncate align-middle"
        >
          <span
            class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-normal text-base"
            data-testid="address__wallet-name"
          >
            My Wallet
          </span>
          <span
            class="sc-AxjAm StDqN text-theme-neutral-light font-normal text-base"
            data-testid="address__wallet-address"
          >
            FJKDSALJFKASL…SAJFKLASJKDFJ
          </span>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`ProfileFormField should select profile 1`] = `
<div>
  <fieldset
    class="sc-AxhCb ckQmOL relative h-20 "
  >
    <div
      class="mb-2"
    >
      <label
        class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
        data-testid="FormLabel"
        for="profile"
        label="Profile"
      >
        Profile
      </label>
    </div>
    <div
      class="sc-fzozJi OgXfh ProfileFormField__select-contact select-transparent"
    >
      <div
        class="sc-fzozJi OgXfh"
      >
        <select
          class="sc-AxgMl fmvYVK overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-12"
          data-testid="ProfileFormField__select-profile"
          name="profile"
        >
          <option
            disabled=""
            selected=""
            value=""
          >
             
          </option>
          <option
            data-testid="ProfileFormField__profile-select"
            value="FJKDSALJFKASLJFKSDAJFKFKDSAJFKSAJFKLASJKDFJ"
          >
            My Wallet FJKDSALJFKASL...SAJFKLASJKDFJ
          </option>
        </select>
        <div
          class="sc-AxheI sc-AxmLO jcthaj w-12 text-lg pointer-events-none text-theme-neutral-dark"
        >
          <div
            class="sc-AxhUy cPXLjK"
            height="1em"
            width="1em"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxheI sc-AxmLO jcthaj"
      >
        <button
          class="px-3 pr-2 text-theme-primary-300 focus:outline-none"
        >
          <div
            class="sc-AxhUy hSYVGy"
            height="20"
            width="20"
          >
            <svg>
              user.svg
            </svg>
          </div>
        </button>
        <div
          class="sc-AxiKw hpWYLk border-theme-neutral-300"
          type="vertical"
        />
        <button
          class="pl-2 pr-4 text-theme-primary-300 focus:outline-none"
        >
          <div
            class="sc-AxhUy hSYVGy"
            height="20"
            width="20"
          >
            <svg>
              receive.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div
      class="absolute ml-4 -mt-10"
    >
      <div
        class="sc-AxirZ HSPq mt-px bg-theme-neutral-200 border-theme-neutral-200"
      />
    </div>
  </fieldset>
</div>
`;
